--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=https://wiki.ustcmc.com:5500/index.php?title=User:Harry00025">
+    <meta http-equiv="refresh" content="0; url=https://www.mcmod.cn/class/15924.html">
   </head>
   <body>
-    <p>如果没有自动跳转，请点击 <a href="https://wiki.ustcmc.com:5500/index.php?title=User:Harry00025">这里</a></p>
+    <p>如果没有自动跳转，请点击 <a href="https://www.mcmod.cn/class/15924.html">这里</a></p>
   </body>
 </html>
